--- a/_data/lang/ja.yml
+++ b/_data/lang/ja.yml
@@ -1,17 +1,17 @@
 lng:
-  name: 日本語
+  name: French
   # based on ISO_639-1 https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes
-  code: ja
+  code: fr
   # specifically needed for open-graph meta og:locale. if open_graph or html_lng_with_country_code not enabled in _data/conf/main.yml, it's not necessary.
   # For html tags, you can enable or disable using html_lng_with_country_code defined in _data/conf/main.yml
   # based on ISO_3166-1 https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
-  country: JP
-  switch_title: Jp
+  country: FR
+  switch_title: Fr
   offer:
-    title: 言語
-    msg_page: このページを日本語で表示する。
+    title: Langue
+    msg_page: Voir cette page en Français.
     # if page translation is not available, use this.
-    msg_site: 日本語ホームへ
+    msg_site: Vers la page principale en français
 
 date:
   # if %b is used in the long format, it will be replaced with the corresponding item in 'months' list below.
@@ -19,39 +19,39 @@ date:
   day: "%d日"
   year: "%Y年"
   # months itself also used in Archive page.
-  months: [1月, 2月, 3月, 4月, 5月, 6月, 7月, 8月, 9月, 10月, 11月, 12月]
+  months: [Jan, Fev, Mar, Avr, Mai, Juin, Juil, Aout, Sept, Oct, Nov, Dec]
 
 not_found:
-  header: ページが見つかりませんでした。
-  line1: リクエストされたページが見つかりませんでした。
-  line2: メニューを試すか、利用可能な場合はサイト検索を試してください。
+  header: Page non trouvée
+  line1: La page que vous avez demandée est introuvable.
+  line2: Essayez le menu, ou la recherche sur le site si disponible.
 
-no_translation_tooltip: 訳がありません
+no_translation_tooltip: Pas de traduction
 
 navigation:
-  contact_header: コンタクト
+  contact_header: Contact
 
-color_scheme_switch_tooltip: 配色
+color_scheme_switch_tooltip: Schéma de couleurs
 
 search:
-  placeholder: 検索
-  noResultText: 何も見つかりませんでした。
+  placeholder: Recherche
+  noResultText: Aucun résultat trouvé.
 
 image_viewer:
-  load_error: 画像が読み込めませんでした。
+  load_error: Impossible de charger cette image
 
 copyright:
-  additional_text: " 著作権で保護されています。"
+  additional_text: " Tous droits réservés."
 
 creative_commons:
-  some_rights_reserved: 一部の権利は留保されています。
+  some_rights_reserved: Certains droits sont réservés.
   # check _data/owner/[language].yml for license type.
-  by: 特に明記されていない限り、このWebサイトのコンテンツはクリエイティブ・コモンズ 表示 4.0 国際 ライセンスの下に提供されています。
-  by-nd: 特に明記されていない限り、このWebサイトのコンテンツはクリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンスの下に提供されています。
-  by-sa: 特に明記されていない限り、このWebサイトのコンテンツはクリエイティブ・コモンズ 表示 - 継承 4.0 国際 ライセンスの下に提供されています。
-  by-nc: 特に明記されていない限り、このWebサイトのコンテンツはクリエイティブ・コモンズ 表示 - 非営利 4.0 国際 ライセンスの下に提供されています。
-  by-nc-nd: 特に明記されていない限り、このWebサイトのコンテンツはクリエイティブ・コモンズ 表示 - 非営利 - 改変禁止 4.0 国際 ライセンスの下に提供されています。
-  by-nc-sa: 特に明記されていない限り、このWebサイトのコンテンツはクリエイティブ・コモンズ 表示 - 非営利 - 継承 4.0 国際 ライセンスの下に提供されています。
+  by: Sauf indication contraire, le contenu de ce site web est régi par une licence internationale Creative Commons Attribution 4.0.
+  by-nd: Sauf indication contraire, le contenu de ce site web est régi par une licence internationale Creative Commons Attribution-NoDerivatives 4.0.
+  by-sa: Sauf indication contraire, le contenu de ce site web est régi par une licence internationale Creative Commons Attribution-ShareAlike 4.0.
+  by-nc: Sauf indication contraire, le contenu de ce site web est régi par une licence Creative Commons Attribution-NonCommercial 4.0 International License.
+  by-nc-nd: Sauf indication contraire, le contenu de ce site web est régi par une licence Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.
+  by-nc-sa: Sauf indication contraire, le contenu de ce site web est régi par une licence Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.
 
 # for 404 layout
 not-found:
@@ -60,173 +60,173 @@ not-found:
 # for post layout
 post:
   read_time:
-    unit: "分"
-    text: "で読めます"
+    unit: " min"
+    text: " read"
     # c for char w for word
     word_char: c
     # char or words per minute
-    per_minute: 500
+    per_minute: 200
   pager_buttons:
-    older_post: "← 古い投稿へ"
-    newer_post: "新しい投稿へ →"
-    first_post: 最初
-    last_post: 最後
+    older_post: "← Ancien post"
+    newer_post: "Nouveau post →"
+    first_post: Premier
+    last_post: Dernier
   comments:
     disqus:
-      count_title: コメント
-      noscript: コメントを表示するには、JavaScriptを有効にしてください。
-      click_to_load: "コメントを表示する"
+      count_title: Commentaires
+      noscript: Veuillez activer JavaScript pour afficher les commentaires.
+      click_to_load: "Chargement commentaires"
       consent:
-        title: コメント (Disqus.com)
+        title: Commentaires (Disqus.com)
         text: >
-          コメント機能はサードパーティによってホストされています。 外部コンテンツを表示することにより、disqus.comの$termsと$privacy_policyに同意したことになります。
-          <br>ターゲットを絞った広告をオプトアウトする場合は、$settings_linkを開き、「opt-out」ボタンをクリックして閉じます。 ここに戻ってコメントを表示してください。
-        terms_link_text: 利用規約
-        privacy_link_text: プライバシーポリシー
-        settings_link_text: このリンク
+          La fonction de commentaire est hébergée par un tiers. En affichant le contenu externe, vous acceptez les $terms et $privacy_policy de disqus.com.
+          <br>Si vous préférez ne pas recevoir de publicité ciblée, ouvrez $settings_link et cliquez sur le bouton "opt-out" et fermez. Revenez ici et chargez les commentaires.
+        terms_link_text: Conditions d'utilisation
+        privacy_link_text: Politique de confidentialité
+        settings_link_text: ce lien
         button:
-          load_once: 今回のみ表示
-          load_and_do_not_ask_again: 常に表示
+          load_once: Montrer uniquement cette fois-ci
+          load_and_do_not_ask_again: Toujours montrer
   table_of_contents:
-    heading: 見出し
+    heading: Contenu
     tooltip:
-      move: ドラッグして移動
-      close: 閉じる
+      move: Faites glisser pour déplacer
+      close: Fermer
   share:
-    heading: シェア
-    link_copied: リンクがコピーされました!
+    heading: Partager sur
+    link_copied: Lien copié !
     tooltip:
       # keys need to match with _data/share.yml
       twitter: Twitter
       facebook: Facebook
       telegram: Telegram
       linkedin: LinkedIn
-      email: メール
-      copy_link: リンクコピー
+      email: Email
+      copy_link: Copier le lien
 
 # for post-list layout
 post-list:
-  title: ブログ
-  button_name: ブログ
+  title: Blog
+  button_name: Blog
   upside_down_tabs:
     tab:
-      all: 全て
-      categories: カテゴリー
-      tags: タグ
-      years: 年
-      clear: クリア
-      close: 閉じる
+      all: Tout
+      categories: Catégories
+      tags: Tags
+      years: Années
+      clear: Clear
+      close: Close
       tooltip:
-        clear: クリア
-        close: 閉じる
+        clear: Clear
+        close: Close
     msg:
       property_list:
         # keys need to match with /query/post-query.json
-        tags: タグ
-        category: カテゴリー
+        tags: Tag
+        category: Catégorie
         year: 年
       # you can use these wildcards, {property} {value} {thumb}
       resultFoundTitleFormat: "{property} : {thumb}"
 
 # for home layout
 home:
-  title: ようこそ
-  button_name: ホーム
-  new_posts_title: 新着記事
-  new_posts_show_more_button: もっと見る ...
+  title: Bienvenue
+  button_name: Home
+  new_posts_title: Nouveaux articles
+  new_posts_show_more_button: Voir plus ...
 
 # for archives layout
 archives:
-  title: アーカイブ
-  button_name: アーカイブ
-  page_header: アーカイブ
+  title: Archive
+  button_name: Archive
+  page_header: Archive
 
 # for about layout
 about:
-  title: 私について
-  button_name: 私について
-  email_title: メール
+  title: About
+  button_name: About
+  email_title: email
 
 # for links layout
 links:
-  title: リンク
-  button_name: リンク
-  link_text: Webサイト
-  info_text: 説明
+  title: Liens
+  button_name: Liens
+  link_text: Site Web
+  info_text: Info
 
 # for projects layout
 projects:
-  title: プロジェクト
-  button_name: プロジェクト
-  read_more_text: 続きを読む
-  read_less_text: 閉じる
+  title: Projets
+  button_name: Projets
+  read_more_text: Lire plus
+  read_less_text: Lire moins
 
 # for privacy-policy layout
 privacy-policy:
-  title: &privacy_policy_title プライバシーポリシー
+  title: &privacy_policy_title Politique de confidentialité
 
 # constants to be replaced for
 constants:
-  greetings: こんにちは
-  welcome: ようこそ
-  sample: サンプル
+  greetings: Bienvenue
+  welcome: Bienvenue
+  sample: Exemple
 
 # for contact form
 contact_form:
-  button_name: お問い合わせフォーム
-  formLoadingText: お問い合わせフォームの読み込み中…
+  button_name: Formulaire de contact
+  formLoadingText: Chargement du formulaire de contact...
 
 # for cookie consent
 cookie_consent:
   privacy_policy_link_text: *privacy_policy_title
-  side_nav_setting_button_tooltip: &cookie_settings クッキー設定
+  side_nav_setting_button_tooltip: &cookie_settings Paramètres des cookies
   panel_bar:
     msg: >
-      当Webサイトは、機能を最適化するためにクッキーを使用しています。
-      承認後に有効になります。
-    privacy_msg: $privacy_linkを確認する。
+      Ce site web utilise des cookies pour optimiser la fonctionnalité du site.
+      Il sera activé avec votre accord.
+    privacy_msg: Vérifiez $privacy_link
     buttons:
-      accept: &accept_button 全て許可
-      settings: 設定
-      deny: &deny_button 拒否
+      accept: &accept_button Autorisez tous
+      settings: Personnalisez
+      deny: &deny_button Refuser
   panel_settings:
     title: *cookie_settings
     msg: >
-      当Webサイトは、機能を最適化するためにクッキーを使用しています。
-      承認後に有効になります。クッキーポリシーについては、以下の各項目をクリックしてください。
-    privacy_msg: $privacy_linkを確認する。
+      Ce site web utilise des cookies pour optimiser la fonctionnalité du site.
+      Il sera activé avec votre approbation. Veuillez cliquer sur chaque élément ci-dessous pour connaître la politique en matière de cookies.
+    privacy_msg: Vérifiez $privacy_link
     buttons:
       accept: *accept_button
-      save: 選択を許可
+      save: Autoriser la sélection
       deny: *deny_button
-    always_active: 常時有効
+    always_active: Toujours actif
     consent_types:
       necessary:
-        title: 不可欠なクッキー
+        title: Cookies strictement nécessaires
         info: >
-          このCookieは、Webサイトの機能に不可欠であり、無効にすることはできません。
-          通常、配色などのサイト機能を変更したときに設定されます。
-          このCookieには、個人を特定できる情報は保存されません。
+          Ces cookies sont essentiels au fonctionnement du site et ne peuvent pas être désactivés.
+          Ils sont généralement installés lorsque la fonction du site, comme le schéma de couleurs, etc. est modifiée.
+          Ces cookies ne stockent pas d'informations personnellement identifiables.
           $gtag_info
       analytics:
-        title: パフォーマンスクッキー
+        title: Cookies de performance
         info: $gtag_info
       preferences:
-        title: 機能性クッキー
+        title: Cookies de fonctionnalité
         info: $gtag_info
       advertising:
-        title: ターゲティング広告クッキー
+        title: Cookies de ciblage et de publicité
         info: $gtag_info
     gtag_info:
       # from https://support.google.com/tagmanager/answer/10718549#consent-types
       ad_storage: >
-        広告に関連する保存（Cookie など）を有効にします。
+        Permet le stockage (tel que les cookies) lié à la publicité.
       analytics_storage: >
-        訪問時の滞在時間などの分析に関連する保存（Cookie など）を有効にします。
+        Permet le stockage (comme les cookies) lié à l'analyse, par exemple la durée des visites.
       functionality_storage: >
-        Webサイトまたはアプリの機能（言語設定など）をサポートする保存を有効にします。
+        Permet le stockage qui prend en charge la fonctionnalité du site web ou de l'application, par exemple les paramètres de langue.
       personalization_storage: >
-        おすすめの動画など、パーソナライズに関連する保存を有効にします。
+        Permet le stockage lié à la personnalisation, par exemple les recommandations vidéo.
       security_storage: >
-        認証機能、不正行為防止、その他のユーザー保護など、
-        セキュリティに関連する保存を有効にします。
+        Permet le stockage lié à la sécurité comme la fonctionnalité d'authentification,
+        la prévention de la fraude et d'autres formes de protection des utilisateurs.
