--- a/_data/lang/ja.yml
+++ b/_data/lang/ja.yml
@@ -15,11 +15,11 @@ lng:
 
 date:
   # if %b is used in the long format, it will be replaced with the corresponding item in 'months' list below.
-  long: "%Y年%m月%d日"
-  day: "%d日"
-  year: "%Y年"
+  long: "%Y %b %-d"
+  day: "%d"
+  year: "%Y"
   # months itself also used in Archive page.
-  months: [Jan, Fev, Mar, Avr, Mai, Juin, Juil, Aout, Sept, Oct, Nov, Dec]
+  months: [Jan, Fév, Mar, Avr, Mai, Juin, Juil, Aout, Sept, Oct, Nov, Déc]
 
 not_found:
   header: Page non trouvée
@@ -124,14 +124,14 @@ post-list:
         # keys need to match with /query/post-query.json
         tags: Tag
         category: Catégorie
-        year: 年
+        year: Année
       # you can use these wildcards, {property} {value} {thumb}
       resultFoundTitleFormat: "{property} : {thumb}"
 
 # for home layout
 home:
   title: Bienvenue
-  button_name: Home
+  button_name: Accueil
   new_posts_title: Nouveaux articles
   new_posts_show_more_button: Voir plus ...
 
@@ -158,8 +158,8 @@ links:
 projects:
   title: Projets
   button_name: Projets
-  read_more_text: Lire plus
-  read_less_text: Lire moins
+  read_more_text: Afficher plus
+  read_less_text: Afficher moins
 
 # for privacy-policy layout
 privacy-policy:
